--- a/app/yaml/pages/p00715.yaml
+++ b/app/yaml/pages/p00715.yaml
@@ -61,7 +61,7 @@ regions:
 
   layout: 
     sequence: 40
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 72700251592752312
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>' # 72700251592752312
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -262,7 +262,7 @@ regions:
 
   layout: 
     sequence: 10
-    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>' # 72699154823752301
+    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>' # 72699154823752301
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -505,7 +505,7 @@ regions:
 - # ====== Region: 5 Deprecated Features - <a href="https://docs
   id: 72699154823752301
   identification: 
-    name: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>'
+    name: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>'
     type: Static Content
 
   layout: 
@@ -568,7 +568,7 @@ regions:
 
   layout: 
     sequence: 40
-    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>' # 72699154823752301
+    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>' # 72699154823752301
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -810,7 +810,7 @@ regions:
 - # ====== Region: 7 Desupported Features - <a href="https://doc
   id: 72700251592752312
   identification: 
-    name: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>'
+    name: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>'
     type: Static Content
 
   layout: 
@@ -886,7 +886,7 @@ regions:
 
   layout: 
     sequence: 30
-    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>' # 72699154823752301
+    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>' # 72699154823752301
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -1099,7 +1099,7 @@ regions:
 
   layout: 
     sequence: 10
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 72700251592752312
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>' # 72700251592752312
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -1193,7 +1193,7 @@ regions:
 
   layout: 
     sequence: 20
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 72700251592752312
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>' # 72700251592752312
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -1475,7 +1475,7 @@ regions:
 
   layout: 
     sequence: 50
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 72700251592752312
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>' # 72700251592752312
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -1551,7 +1551,7 @@ regions:
 
   layout: 
     sequence: 30
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 72700251592752312
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>' # 72700251592752312
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -1827,7 +1827,7 @@ regions:
 
   layout: 
     sequence: 20
-    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>' # 72699154823752301
+    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>' # 72699154823752301
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -1906,7 +1906,7 @@ regions:
 
   layout: 
     sequence: 50
-    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>' # 72699154823752301
+    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.1/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>' # 72699154823752301
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
