--- a/app/yaml/pages/p00720.yaml
+++ b/app/yaml/pages/p00720.yaml
@@ -45,7 +45,7 @@ regions:
 
   layout: 
     sequence: 10
-    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>' # 93319249707815855
+    parent-region: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>' # 93319249707815855
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -95,7 +95,7 @@ regions:
 - # ====== Region: 5 Deprecated Features - <a href="https://docs
   id: 93319249707815855
   identification: 
-    name: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/deprecated-features.html#GUID-657FF369-756E-4F31-96F9-B2D92C3DE084" target="_blank">Link to Release Notes</a>'
+    name: '5 Deprecated Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/deprecated-features.html" target="_blank">Link to Release Notes</a>'
     type: Static Content
 
   layout: 
@@ -134,7 +134,7 @@ regions:
 - # ====== Region: 7 Desupported Features - <a href="https://doc
   id: 93320346476815866
   identification: 
-    name: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>'
+    name: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>'
     type: Static Content
 
   layout: 
@@ -178,7 +178,7 @@ regions:
 
   layout: 
     sequence: 10
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 93320346476815866
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>' # 93320346476815866
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
@@ -268,7 +268,7 @@ regions:
 
   layout: 
     sequence: 20
-    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html#GUID-CC4B5D70-22FD-45CA-8F6F-C34A91F1B5BD" target="_blank">Link to Release Notes</a>' # 93320346476815866
+    parent-region: '7 Desupported Features - <a href="https://docs.oracle.com/en/database/oracle/apex/23.2/htmrn/desupported-features.html" target="_blank">Link to Release Notes</a>' # 93320346476815866
     slot: SUB_REGIONS
     start-new-layout: false
     start-new-row: true
